# POSE

./: .gitignore  Cargo.toml  README.md
aux_utils/: geo_oribtal_plot.r
data/: iss.json  lunar_ecc.json  test_input.json
data/ISS_OCT_10TH_2023/: iss.json
data/ISS_OCT_23RD_2023/: iss.json
data/reference/: ISS.OEM_J2K_EPH.txt
examples/ISS_OCT_23RD_2023/: iss.json
examples/ISS_OCT_23RD_2023/ref/: SW-Last5Years.csv
src/: bodies.rs  collision.rs  earth.rs  environment.rs  innout.rs  input.rs  macros.rs  main.rs  moon.rs  output.rs  sim.rs  sim_cpu.rs  sol.rs  types.rs
src/bodies/: common.rs  mod.rs  sim_object.rs  solar_model.rs  solar_object.rs
src/cpu/: earth.rs  mod.rs  moon.rs  sim_cpu.rs  sol.rs
src/perturb/: common.rs  earth.rs  mod.rs  moon.rs  sol.rs
util/: celes_trak_to_sim_config.py  geo_oribtal_plot.r  graphical_output_inspector.py  inject_debris_config.py  iss_trajectory_compare.py  requirements.txt
