[package]
name = "pose"
version = "0.1.0"
authors = ["Dylan Wagner <drw6528@rit.edu>"]


[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
clap = { version = "*", features = ["derive"] }
chrono = "*"
strum = "*"
strum_macros = "*"
csv = "*"
impl_ops = "*"

[profile.release]
lto = true