[package]
name = "pose"
version = "0.1.0"
authors = ["Dylan Wagner <drw6528@rit.edu>"]


[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
clap = { version = "*", features = ["derive"] }
chrono = { version = "*", features = ["serde"] }
strum = "*"
strum_macros = "*"
csv = "*"
impl_ops = "*"
rayon = "*"
nrlmsise00c = { git = "https://github.com/wagnerdylan/NRLMSISE-00-C", version = "0.1.0", package = "nrlmsise-00-c" }
rust-spice = "*"
satkit = "*"
nalgebra = "*"

[profile.release]
lto = true
